# hxediter

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  main.c  release.ps1  undo.h
include/: app_state.h  display.h  editor.h  fileops.h  gui.h  hex_editor_core.h  path_utils.h  platform.h  undo.h  updater.h  win_drop_target.h
include/platform/: file_dialogs.h
include/triage/: classifier.h  hasher.h  move_actions.h  scanner.h  signatures.h
include/ui/: actions.h  gui_state.h  help_panel.h  hex_grid.h  layout.h  settings_panel.h  start_screen.h  status_bar.h  theme.h  toolbar.h  triage_panel.h
src/: display.c  display.cpp  fileops.c  fileops.cpp  gui.cpp  hex_editor_core.cpp  main.c  main.cpp  path_utils.cpp  undo.cpp  updater.cpp  win_drop_target.cpp
src/cli/: hxsort_main.cpp
src/platform/: file_dialogs_win32.cpp
src/triage/: classifier.cpp  hasher.cpp  move_actions.cpp  scanner.cpp  signatures.cpp
src/ui/: actions.cpp  gui_state.cpp  help_panel.cpp  hex_grid.cpp  settings_panel.cpp  start_screen.cpp  status_bar.cpp  theme.cpp  toolbar.cpp  triage_panel.cpp
tools/updater_helper/: main.cpp
